# tg-random-word-bot

./: README.md  main.py  pyproject.toml
src/ai/: model_selector.py  openrouter_client.py
src/bot/: message_formatter.py  telegram_client.py
src/config/: settings.py
src/utils/: exceptions.py  logging.py  word_selector.py
